# CASC-lite

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  experiment_report_20251024_054546.md  experiment_report_20251026_073707.md  experiment_report_20251029_n7_analysis.md  fixed_readme.md  pyproject.toml  report.md  requirements.txt  todo.md
.github/workflows/: ci.yml
data/: gsm8k_mini.jsonl
reports/experiments/: experiment_report_20251018_225634.md  experiment_report_20251026_simulation.md
reports/n50_batch/: 20251030_n50_batch_report.md
reports/papers/: ipsj.cls  ipsj_casc_lite_report.tex
scripts/: analyze_headroom.py  eval_entropy_cascade.py  install.sh  plot_example.sh  run_examples.sh  run_fixed_batch.py  run_full_suite.sh  run_n7_posthoc.sh  sweep_example.sh  train_entropy_cascade.py  train_entropy_nn.py
src/casc_lite/: __init__.py
src/casc_lite/backends/: __init__.py  base.py  hf_transformers.py  vllm.py
src/casc_lite/cli/: __init__.py  export_plots.py  run_once.py  sweep_thresholds.py
src/casc_lite/config/: default.yaml
src/casc_lite/core/: __init__.py  entropy.py  evaluate.py  sampling.py  utils.py
tests/: test_cli_run_once.py  test_entropy.py  test_evaluate.py  test_sampling.py  test_utils.py
