[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casc-lite-entropy-adaptive-sc"
version = "0.1.0"
description = "CASC-lite: Entropy-adaptive self-consistency reproduction"
authors = [{name = "CASC-lite Team"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = [
  "/.venv",
  "/.git",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["casc_lite"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "C4", "BLE", "ARG", "PL"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
